<resources>
    <string name="app_name">Shop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logBtn">Login</string>
    <string name="regBtn">Registration</string>
    <string name="regText">Registration</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="pwdAgain">Password Again</string>
    <string name="back">Back</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="radio_guest">Guest</string>
    <string name="radio_admin">Admin</string>
    <string name="radio_customer">Customer</string>
    <string name="radio_seller">Seller</string>
    <string name="product_description">Product description</string>
    <string name="loginGoogle">Login Google</string>
    <string name="item_placeholder">Description</string>
    <string name="item_info_placeholder">Product info</string>
    <string name="buy_this">Buy this</string>

    <string-array name="phoneModes">
        <item>Home</item>
        <item>Work</item>
        <item>Mobil</item>
        <item>Other</item>
    </string-array>
</resources>